2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c (options): Fix a dot in the middle of the
	sentence.
	Reported by: Milo Casagrande.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c: Add TRANSLATORS comments.
	* grub-core/commands/gptsync.c: Likewise.
	* grub-core/commands/hashsum.c: Likewise.
	* grub-core/commands/i386/pc/sendkey.c: Likewise.
	* grub-core/commands/legacycfg.c: Likewise.
	* grub-core/io/gzio.c: Likewise.
	* grub-core/net/net.c: Likewise.
	* grub-core/term/gfxterm.c: Likewise.
	* grub-core/term/terminfo.c: Likewise.
	* grub-core/tests/test_blockarg.c: Likewise.
	* grub-core/video/video.c: Likewise.
	* util/grub-install.in: Likewise.
	* util/grub-mkfont.c: Likewise.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (help_filter): Add missing capitalisation.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/search_wrap.c (options): Fix a typo.
	Reported by: David Prévot.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-kbdcomp.in: Change "layout" to "keyboard layout" in
	description.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-script-check.c (main): Fix a syntax error message which was
	unclear.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in (usage): Fix ROM capitalisation.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/search_wrap.c (options): Fix wrong copy-paste in
	messages.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (options): Remove OPTION_ARG_OPTIONAL from options
	without argument.
	* util/grub-mount.c (options): Likewise.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Unify diskboot.img size message.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/http.c: Add TRANSLATORS comments.