@@ -894,6 +894,8 @@ grub_cmd_linux (grub_command_t cmd __attribute__ ((unused)),
 		vid_mode > GRUB_VESA_MODE_TABLE_END)
 	      {
 		grub_env_set ("gfxpayload", "text");
+		/* TRANSLATORS: "x" has to be entered in, like an identifier,
+		   so please don't use better Unicode codepoints.  */
 		grub_printf_ (N_("%s is deprecated. VGA mode %d isn't recognized. "
 				 "Use set gfxpayload=WIDTHxHEIGHT[xDEPTH] "
 				 "before linux command instead.\n"),
