@@ -1,5 +1,11 @@
 2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/videoinfo.c: Add TRANSLATORS comments.
+	* grub-core/commands/videotest.c: Likewise.
+	* grub-core/loader/i386/linux.c: Likewise.
+
+2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/commands/acpi.c (options): Fix a dot in the middle of the
 	sentence.
 	Reported by: Milo Casagrande.
